cleanup, dimensions fix, header spacing/font size

--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -3,7 +3,8 @@ header{
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0 rem(20px); 
+  padding: rem(8px) rem(20px); 
+  font-size: rem(20px);
   
   .name {
     flex-shrink: 0;
